plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '1.0.7-SNAPSHOT'

bootJar {
    archiveBaseName = 'EComersApp'
    archiveVersion = version.replace('-SNAPSHOT', '')
}

java {

    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

jar{

    enabled = false
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
    implementation 'org.postgresql:postgresql'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.keycloak:keycloak-admin-client:26.0.7'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'


    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-core:5.20.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    doFirst {
        def mockitoAgent = configurations.testRuntimeClasspath.find { it.name.contains("mockito-core") }
        if (mockitoAgent != null) {
            println "Adding Mockito agent: $mockitoAgent"
            jvmArgs += ["-javaagent:$mockitoAgent"]
        } else {
            println "Mockito core jar not found in testRuntimeClasspath!"
        }
    }
    useJUnitPlatform()
}


